# python-solid-principles

./: .editorconfig  .gitignore  .pre-commit-config.yaml  pyproject.toml
src/python_solid_principles/: file_store.py
tests/: test_file_store.py
