[tool.poetry]
name = "python-solid-principles"
version = "0.1.0"
description = ""
authors = ["Johan Vergeer <johanvergeer@gmail.com>"]
packages = [
    { include = "python_solid_principles", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
structlog = "^20.1.0"
isort = "^4.3.21"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
faker = "^4.1.0"
black = "^19.10b0"
seed-isort-config = "^2.1.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = false
use_parentheses = true
line_length = 88
known_first_library = ["python_solid_principles", "tests"]
known_third_party = ["structlog"]
known_test_library = ["pytest", "faker"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "TEST_LIBRARY", "FIRSTPARTY", "LOCALFOLDER"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
